Use EnumSet in AccessFlag
Likely not worth it rn, the indirection of unmodifiable + their field overheads probably makes it use more memory while not being that much faster. And likely slower to init (?)